--- a/src/cscc/App.css
+++ b/src/cscc/App.css
@@ -4,38 +4,38 @@
     justify-content: center;
     align-items: center;
     position: relative;
-}
 
-.border-line {
-    width: 140vh;
-    height: 100vh;
-    border-left: 1px solid var(--border-color);
-    border-right: 1px solid var(--border-color);
-    position: relative;
-}
+    .border-line {
+        width: 140vh;
+        height: 100vh;
+        border-left: 1px solid var(--border-color);
+        border-right: 1px solid var(--border-color);
+        position: relative;
 
-/* Вертикальная линия по центру */
-.border-line::before {
-    content: '';
-    position: absolute;
-    left: 50%;
-    top: 0;
-    bottom: 0;
-    width: 1px;
-    background-color: var(--border-color);
-    transform: translateX(-50%);
-}
+        /* Вертикальная линия по центру */
+        &::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 0;
+            bottom: 0;
+            width: 1px;
+            background-color: var(--border-color);
+            transform: translateX(-50%);
+        }
 
-/* Горизонтальная линия по центру */
-.border-line::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    z-index: -220;
-    height: 1px;
-    opacity: 1;
-    background-color: var(--border-color);
-    transform: translateY(-50%);
+        /* Горизонтальная линия по центру */
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            z-index: -220;
+            height: 1px;
+            opacity: 1;
+            background-color: var(--border-color);
+            transform: translateY(-50%);
+        }
+    }
 }
